--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="#mywork">My Work</a></li>
-                    <li><a href="#myskills">My Skills</a></li>
-                    <li><a href="#contactme">Contact Me</a></li>
+                    <li><a href="#mywork">Work</a></li>
+                    <li><a href="#myskills">Skills</a></li>
+                    <li><a href="#experience">Experience</a></li>
+
 
             </nav>
         </header>
-        <div class="social-header">
+        <div class="social-header animate__animated" data-animation="animate__lightSpeedInRight">
             <ul>
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -81,10 +82,11 @@
                 </p>
             </div>
         </div>
-        <img class="right left animate__animated " data-animation="animate__fadeInUp" src="./images/Screenshot (22).png " alt="featured-project ">
+        <a target="_blank" href="http://drkhushboogynecologist.com" class="featured-title"><img class="right left animate__animated rounded" data-animation="animate__fadeInUp" src="./images/Screenshot (22).png " alt="featured-project "></a>
     </section>
 
     <section class="skills " id="myskills">
+        <h1 class="animate__animated " data-animation="animate__wobble">MY SKILLS</h1>
         <div class="skills-container ">
             <ul>
                 <li class="transition2 animate__animated " data-animation="animate__fadeInUp">
@@ -110,7 +112,7 @@
                     <div class="icon-container three ">
                         <img src="./images/Component 3 – 1.svg " alt="DSA Icon ">
                     </div>
-                    <p class="skill-title ">ANDROID APP DEVELOPMENT</p>
+                    <p class="skill-title">ANDROID APP DEVELOPMENT</p>
                     <p class="featured-desc skill-desc ">I find android app development relatively easy to learn and much time more impactful when it comes to usefulness. My base of Android App Development is Java. I work on Android Studio and I have experinece of working on the IntelliJ
                         platform too.</p>
 
@@ -119,8 +121,9 @@
         </div>
     </section>
 
-    <section class="portfolio " id="myexperience">
-        <div class="portfolio-container transition3 ">
+    <section class="portfolio " id="experience">
+        <h1 class="animate__animated " data-animation="animate__wobble">MY EXPERIENCE</h1>
+        <div class="portfolio-container prism ">
             <div class="portfolio-left ">
                 <div class="inner animate__animated" data-animation="animate__fadeInDown">
                     <p class="subtitle ">EXPERIENCE</p>
@@ -130,8 +133,8 @@
             </div>
             <a href="# "><img class="animate__animated" data-animation="animate__fadeInRight" src="./images/prism_logo.png " alt="prism "></a>
         </div>
-        <div class="portfolio-container transition3 ">
-            <a href="# "><img class="animate__animated" data-animation="animate__fadeInLeft" src="./images/google.svg" alt="prism "></a>
+        <div class="portfolio-container dsc ">
+            <a href="# "><img class="animate__animated gdsc" data-animation="animate__fadeInLeft" src="./images/google.svg" alt="prism "></a>
             <div class="portfolio-left ">
                 <div class="inner animate__animated" data-animation="animate__fadeInUp">
                     <p class="subtitle ">EXPERIENCE</p>
