--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samar C.</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -29,10 +30,10 @@
         </header>
         <div class="social-header animate__animated" data-animation="animate__lightSpeedInRight">
             <ul>
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a target='_blank' href="https://www.facebook.com/samar.chandra.188"><i class="fab fa-facebook"></i></a></li>
+                <li><a target='_blank' href="https://www.instagram.com/_i.samar/"><i class="fab fa-instagram"></i></a></li>
+                <li><a target='_blank' href="https://www.linkedin.com/in/samar-chandra-5255651b3/"><i class="fab fa-linkedin"></i></a></li>
+                <li><a target='_blank' href="https://twitter.com/SamarChandra7"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
     </div>
