--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/486ddd9a02.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
     <div class="hero">
         <canvas id="pixie"></canvas>
         <div class="content">
-            <h1 class="animate__animated" data-animation="animate__lightSpeedInLeft">The Aspiring WebDev</h1>
+            <h1 class="animate__animated" data-animation="animate__lightSpeedInLeft">The Aspiring Engineer</h1>
             <div class="meet">
                 <p class="animate__animated" data-animation="animate__lightSpeedInRight">👇 Meet Samar Chandra</p>
             </div>
@@ -124,6 +125,19 @@
 
     <section class="portfolio " id="experience">
         <h1 class="animate__animated " data-animation="animate__wobble">MY EXPERIENCE</h1>
+        <div class="portfolio-container gfg ">
+            <a href="# "><img class="animate__animated gdsc" data-animation="animate__fadeInLeft" src="./images/gfg.png" alt="prism "></a>
+            <div class="portfolio-left ">
+                <div class="inner animate__animated" data-animation="animate__fadeInUp">
+                    <p class="subtitle ">EXPERIENCE</p>
+                    <p class="featured-title ">Technical Content Writer @ Geeksfor Geeks</p>
+                    <p class="featured-desc ">As a Technical Content Writer Intern, it is my responsibility to generate factually correct and informative articles
+                        on technical topics and proofread and improve other articles which have been published earlier.
+                        <a href="https://auth.geeksforgeeks.org/user/samarc476/articles">Click on me to go to List of published articles.</a>
+                        </p>
+                </div>
+            </div>
+        </div>
         <div class="portfolio-container prism ">
             <div class="portfolio-left ">
                 <div class="inner animate__animated" data-animation="animate__fadeInDown">
