--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="hero">
         <canvas id="pixie"></canvas>
         <div class="content">
-            <h1 class="animate__animated" data-animation="animate__lightSpeedInLeft">The Aspiring Engineer</h1>
+            <h1 class="animate__animated" data-animation="animate__lightSpeedInLeft">An Aspiring Engineer</h1>
             <div class="meet">
                 <p class="animate__animated" data-animation="animate__lightSpeedInRight">👇 Meet Samar Chandra</p>
             </div>
@@ -88,7 +88,7 @@
     </section>
 
     <section class="skills " id="myskills">
-        <h1 class="animate__animated " data-animation="animate__wobble">MY SKILLS</h1>
+        <h1 class="animate__animated " data-animation="animate__fadeInDown">MY SKILLS</h1>
         <div class="skills-container ">
             <ul>
                 <li class="transition2 animate__animated " data-animation="animate__fadeInUp">
@@ -124,16 +124,29 @@
     </section>
 
     <section class="portfolio " id="experience">
-        <h1 class="animate__animated " data-animation="animate__wobble">MY EXPERIENCE</h1>
-        <div class="portfolio-container gfg ">
-            <a href="# "><img class="animate__animated gdsc" data-animation="animate__fadeInLeft" src="./images/gfg.png" alt="prism "></a>
+        <h1 class="animate__animated " data-animation="animate__fadeInUp">MY EXPERIENCE</h1>
+        <div class="portfolio-container gfg">
+            <div class="portfolio-left">
+                <div class="inner animate__animated " data-animation="animate__fadeInDown">
+                    <p class="subtitle ">EXPERIENCE</p>
+                    <p class="featured-title ">Technical Content Writer @ GeeksforGeeks</p>
+                    <p class="featured-desc">As a Technical Content Writer Intern, it is my responsibility to generate factually correct and informative articles
+                        on technical topics and proofread and improve other articles which have been published earlier.
+                        <a href="https://auth.geeksforgeeks.org/user/samarc476/articles">Click on me to go to List of published articles.</a>
+                        </p>
+                </div>
+            </div>
+            <a href="# "><img class="animate__animated gfgicon" data-animation="animate__fadeInRight" src="./images/gfg.png " alt="prism "></a>
+        </div>
+        <div class="portfolio-container tkpara">
+            <a href="# "><img class="animate__animated tk" data-animation="animate__fadeInLeft" src="./images/tk.png" alt="prism "></a>
             <div class="portfolio-left ">
                 <div class="inner animate__animated" data-animation="animate__fadeInUp">
                     <p class="subtitle ">EXPERIENCE</p>
-                    <p class="featured-title ">Technical Content Writer @ Geeksfor Geeks</p>
-                    <p class="featured-desc ">As a Technical Content Writer Intern, it is my responsibility to generate factually correct and informative articles
-                        on technical topics and proofread and improve other articles which have been published earlier.
-                        <a href="https://auth.geeksforgeeks.org/user/samarc476/articles">Click on me to go to List of published articles.</a>
+                    <p class="featured-title ">Cybersecurity Intern @ Talakunchi Enterprises</p>
+                    <p class="featured-desc ">As a Cybersecurity Intern, my responsibility was to learn about the most common ways a web application or a
+                        server can be attacked. I learned to perform the attacks on a vulnerable server, configured specifically for that use
+                        and learn how to pentest web applications of clients and generate a report.
                         </p>
                 </div>
             </div>
